--- a/TODO.html
+++ b/TODO.html
@@ -11,7 +11,8 @@
       <h1 id="main-heading">TODO-APP</h1>
       <main class="main">
         <div class="input-section">
-          <input id="input" type="text" placeholder="Enter Todo Here" />
+          <input id="input_task" type="text" placeholder="Enter Todo Here" />
+          <input id="input_date" type="date" />
           <button
             id="addButton"
             onclick="
