add full function

--- a/TODO.html
+++ b/TODO.html
@@ -10,7 +10,7 @@
     <div class="maincontainer">
       <h1 id="main-heading">TODO-APP</h1>
       <main class="main">
-        <div class="input-section">
+        <div class="grid-container">
           <input id="input_task" type="text" placeholder="Enter Todo Here" />
           <input id="input_date" type="date" />
           <button
@@ -21,7 +21,7 @@
             Add
           </button>
         </div>
-        <div class="todo-container"></div>
+        <div class="todo-container grid-container"></div>
       </main>
     </div>
     <script src="TODO.js"></script>
